[package]
name = "plugger-ruby"
version = "0.1.0"
authors = ["Dylan McKay <dylan.mckay@powershop.co.nz>"]

description = "Ruby bindings to Plugger"
repository = "https://github.com/dylanmckay/plugger-ruby"

readme = "README.md"
keywords = ["ruby", "plugin"]
license = "MIT"

[dependencies]
rurust = "0.1.1"
plugger-core = "0.1.1"
plugger-macros = "0.1.1"

[lib]
name = "plugger_ruby"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "tools/test.rs"
