[package]
name = "plugger-ruby"
version = "0.1.0"
authors = ["Dylan McKay <dylan.mckay@powershop.co.nz>"]

description = "Ruby bindings to Plugger"
repository = "https://github.com/dylanmckay/plugger-ruby"

readme = "README.md"
keywords = ["ruby", "plugin"]
license = "MIT"

[dependencies]
rurust = "0.1.6"
plugger-core = { path = "../plugger-core" }
# plugger-core = "0.1.5"
libc = "0.2.11"

[dev-dependencies]
plugger-macros = { path = "../plugger-macros" }

[lib]
name = "plugger_ruby"
path = "src/lib.rs"

