[package]
name = "plugger-core"
version = "0.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "The Plugger support library"

repository = "https://github.com/dylanmckay/plugger"
readme = "../README.md"
keywords = ["plugin"]
license = "MIT"

[lib]
name = "plugger_core"
path = "src/lib.rs"

