[package]
name = "plugger-macros"
version = "0.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Plugger macros"

# These URLs point to more information about the repository.
# FIXME: repository = "https://github.com/dylanmckay/plugger-core"
keywords = ["plugin"]

license = "MIT"

[dependencies]
plugger-core = { path = "../core" }
plugger-ruby = { path = "../ruby", optional = true }

[features]
default = ["ruby"]

# Enable this feature to support ruby.
ruby = ["plugger-ruby"]

[lib]
name = "plugger_macros"
path = "src/lib.rs"
plugin = true
