[package]
name = "plugger"
version = "0.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Plugger"

repository = "https://github.com/dylanmckay/plugger"
keywords = ["plugin"]

license = "MIT"

[dependencies]
plugger-core = { path = "../core" }
plugger-ruby = { path = "../ruby", optional = true }

[features]
default = ["ruby"]

# Enable this feature to support ruby.
ruby = ["plugger-ruby"]

[lib]
name = "plugger"
path = "src/lib.rs"
plugin = true
