[package]
name = "plugger"
version = "0.3.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Plugger"

repository = "https://github.com/dylanmckay/plugger"

readme = "../README.md"
keywords = ["plugin"]
license = "MIT"

# Required for the examples.
[dev-dependencies]
plugger-core = { path = "../core", version = "0.3" }
plugger-ruby = { path = "../ruby", version = "0.3" }

[features]
default = ["ruby"]

# Enable this feature to support ruby.
ruby = []

[lib]
name = "plugger"
path = "src/lib.rs"
plugin = true
