[package]
name = "plugger-ruby"
version = "0.3.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Ruby bindings to Plugger"
repository = "https://github.com/dylanmckay/plugger"

readme = "../README.md"
keywords = ["ruby", "plugin"]
license = "MIT"

[dependencies]
rurust = "0.1.7"
plugger-core = { version = "0.3.0", path = "../core" }
libc = "0.2.11"

[lib]
name = "plugger_ruby"
path = "src/lib.rs"

